# e4rat

./: .gitignore  CMakeLists.txt  README
doc/: CMakeLists.txt  e4rat-collect.pod  e4rat-preload.pod  e4rat-realloc.pod  e4rat.conf.pod
src/: CMakeLists.txt  buddycache.cc  common.cc  common.hh  config.cc  config.hh  defrag.cc  defrag.hh  device.cc  device.hh  e4rat-collect.cc  e4rat-preload.cc  e4rat-realloc.cc  e4rat.conf  eventcatcher.cc  fiemap.cc  fiemap.hh  fileoffset.cc  fileptr.cc  listener.cc  listener.hh  logging.cc  logging.hh  parsefilelist.hh
